welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
SnakeBuggle:20: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()) {
  ^